issue/3094 Added visibility hidden to clearfix (#3095)

--- a/src/core/less/_defaults/utility.less
+++ b/src/core/less/_defaults/utility.less
@@ -4,6 +4,7 @@
   display: block;
   height: 0;
   overflow: hidden;
+  visibility: hidden;
 }
 
 .u-clearfix:after { clear: both; }
